@@ -13,6 +13,7 @@
   * Removed jinja2 as a dependency
   * Fixed a bug in lsl.common.sdf dealing with parsing LST times
   * Added the inspectTarball.py script
+  * Added an option to the lsl.imaging.utils.CorrelatedData class to only return baselines in a certain uv range
 
 0.6.1
   * Added support for DROS metatags in the SESSION_SPC SDF keyword
